--- a/pom.xml
+++ b/pom.xml
@@ -40,46 +40,6 @@
          </goals>
        </execution>
      </executions>
-   </plugin> 
-      <plugin>
-        <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.mycompany.app.App</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.4</version>
-      <configuration>
-         <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-         <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-      </configuration>
-      <executions>
-       <execution>
-         <id>jacoco-initialize</id>
-         <goals>
-          <goal>prepare-agent</goal>
-         </goals>
-      </execution>
-      <execution>
-        <id>jacoco-site</id>
-        <phase>package</phase>
-        <goals>
-          <goal>report</goal>
-         </goals>
-       </execution>
-     </executions>
-   </plugin> 
-    </plugins>
+   </plugin
   </build>
 </project>
